--- a/duckdb.qmd
+++ b/duckdb.qmd
@@ -9,7 +9,7 @@ editor: "source"
 
 `install.packages("duckdb")`
 
-Once installed the following code-chunks will work. I have no clue where the db executable is installed in the LFS, but it must be somewhere. Anyway, the code-chunk below create a database file `my-db.duckdb` installs. In any case, R can create a duckdb database file, and then I can download a separate duckdb executable that also reads the same database file. Therefore, in theory, Tableau can connect to the same file via an ODBC or JDBC connection. There is some interwebs documentation on this but I didn't attempt it. That said one warning is that duckdb is not an industrial/transactional ACID database program. It can be handy for single-user analytics. But if MIDS students want to do a lot of simultaneous querries and writes with potential collisions, a more rhobust database is perhaps advisable. But for teaching purposes, this is a simple way to show how R can read and write via SQL to a database file. That same database file can the source of data for a Tableau query. (Which, with my limited understanding, was their goal.)
+Once installed the following code-chunks will work. I have no clue where the db executable is installed in the LFS, but it must be somewhere. Anyway, the code-chunk below create a database file `my-db.duckdb` installs. In any case, R can create a duckdb database file, and then I can download a separate duckdb executable that also reads the same database file. Therefore, in theory, Tableau can connect to the same file via an ODBC or JDBC connection. There is some interwebs documentation on this but I didn't attempt it. That said one warning is that duckdb is not an industrial/transactional ACID database program. It can be handy for single-user analytics. But if MIDS students want to do a lot of simultaneous queries and writes with potential collisions, a more robust database is perhaps advisable. But for teaching purposes, this is a simple way to show how R can read and write via SQL to a database file. That same database file can the source of data for a Tableau query. (Which, with my limited understanding, was their goal.)
 
 ## load library packages
 
